# teste-pypi

./: README.md  setup.cfg
src/example_package/: example.py
