[metadata]
name = example-pkg-mnii-teste
version = 0.0.1
author = Aluno de MNII
description = Teste para Métodos Numéricos II
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/artsasse/teste-pypi.git
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
